welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: 'while' expected but 'var' found.
	var baggle = 0
        ^Poucet:6: error: '(' expected but ';' found.
			if (estSurBiscuit())
^Poucet:8: error: '(' expected but identifier found.
	if baggle <=2
           ^Poucet:10: error: '(' expected but identifier found.
	if baggle >=3
           ^Poucet:14: error: illegal start of simple expression
	}
        ^